web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@charset 'utf-8';

.modal:not(.fade) {
  @include media-breakpoint-down(xs) {
    position: relative;
  }

  @include media-breakpoint-up(sm) {
    margin-top: 91px;
    margin-bottom: 75px;
  }
}

.modal-open {
  @include media-breakpoint-up(sm) {
    position: fixed;
    width: 100vw;
    height: 100vh;
    max-height: 100vh;
    overflow: hidden;
  }

  .modal {
    -webkit-overflow-scrolling: touch;
  }
}

.modal-dialog {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  width: calc(100% - #{$grid-gutter-width});
  min-height: 65vh;
  height: 100%;
  text-align: left;
  margin-right: ($grid-gutter-width / 2);
  margin-left: ($grid-gutter-width / 2);

  .modal:not(.fade) & {
    margin-top: 0;
    margin-bottom: 0;
  }
}

.modal-content {
  flex: 1 0 100%;
  position: static;
  height: 100%;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;

  &[class*=bg-] {
    &:before,
    &:after {
      content: '';
      display: block;
      position: absolute;
      z-index: 1;
      left: 0;
      width: 100%;
      height: $border-radius-lg;
    }

    &:before {
      top: 0;
      border-top-left-radius: $border-radius-lg;
      border-top-right-radius: $border-radius-lg;
    }

    &:after {
      bottom: 0;
      border-bottom-left-radius: $border-radius-lg;
      border-bottom-right-radius: $border-radius-lg;
    }
  }

  @each $color, $value in $theme-colors {
    &.bg-#{$color} {
      &:before {
        background-image: linear-gradient(to bottom, $value 20%, rgba($value, 0) 100%);
      }

      &:after {
        background-image: linear-gradient(to top, $value 20%, rgba($value, 0) 100%);
      }
    }
  }
}

.modal-header {
  padding-top: 0;
  padding-bottom: 0;
  flex-direction: column;
  flex-shrink: 0;

  .alert {
    margin-top: $spacer;
    margin-bottom: 0;

    .close {
      margin: 0;
    }
  }

  &.sticky-top:after {
    @extend .modal-content[class*=bg-]:before;

    top: 100%;
  }
}

.modal-title {
  font-weight: $font-weight-normal;
}

.modal-body {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  min-height: min-content;

  .fullpage-wrapper {
    min-height: 0;
  }
}

.modal-footer {
  flex-shrink: 0;
  border-radius: $border-radius-lg;

  @include media-breakpoint-down(xs) {
    flex-wrap: wrap;

    > *:not('.btn-circle') {
      flex: 1 1 auto;
      margin-bottom: $spacer * 0.5;
    }
  }

  &.sticky-bottom {
    border-bottom-right-radius: $border-radius-lg;
    border-bottom-left-radius: $border-radius-lg;

    .container > &,
    .container-fluid > & {
      margin-right: ($grid-gutter-width / -2);
      margin-left: ($grid-gutter-width / -2);
    }
  }
}

// We sometimes need to have a modal look but it's not really a modal
.modal.force-show,
.modal-open .modal {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.modal-real {
  &.show {
    display: flex !important;
  }

  .modal-dialog {
    height: auto;
  }
}

